--- a/python3/101_symmetric-tree.ipynb
+++ b/python3/101_symmetric-tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,55 +14,46 @@
     "        self.right = None\n",
     "\n",
     "class Solution:\n",
-    "    def levelOrder(self, root):\n",
+    "    def isSymmetric(self, root):\n",
     "        \"\"\"\n",
     "        :type root: TreeNode\n",
-    "        :rtype: List[List[int]]\n",
+    "        :rtype: bool\n",
     "        \"\"\"\n",
-    "        res = []\n",
-    "        if not root:\n",
-    "            return res\n",
-    "        layer = [root]\n",
-    "        while layer:\n",
-    "            tmp = []\n",
-    "            res.append([])\n",
-    "            for node in layer:\n",
-    "                if node.left:\n",
-    "                    tmp.append(node.left)\n",
-    "                if node.right:\n",
-    "                    tmp.append(node.right)\n",
-    "                res[-1].append(node.val)\n",
-    "            layer = tmp\n",
-    "        return res"
+    "        def recursive(left, right):\n",
+    "            if left == None == right:\n",
+    "                return True\n",
+    "            elif left != None != right and left.val == right.val:\n",
+    "                return recursive(left.left, right.right) and recursive(left.right, right.left)\n",
+    "            else:\n",
+    "                return False\n",
+    "        return True if not root else recursive(root.left, root.right)\n",
+    "                    \n",
+    "                    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[7]]"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t1 = TreeNode(3)\n",
-    "t2 = TreeNode(9)\n",
-    "t3 = TreeNode(20)\n",
+    "t1 = TreeNode(1)\n",
+    "t2 = TreeNode(2)\n",
+    "t3 = TreeNode(3)\n",
     "t1.left = t2\n",
     "t1.right = t3\n",
-    "t4 = TreeNode(15)\n",
-    "t5 = TreeNode(7)\n",
-    "t3.left = t4\n",
-    "t3.right = t5\n",
-    "Solution().levelOrder(t5)"
+    "Solution().isSymmetric(t1)"
    ]
   },
   {
