--- a/python3/103_binary-tree-zigzag-level-order-traversal.ipynb
+++ b/python3/103_binary-tree-zigzag-level-order-traversal.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definition for a binary tree node.\n",
-    "class TreeNode:\n",
-    "    def __init__(self, x):\n",
-    "        self.val = x\n",
-    "        self.left = None\n",
-    "        self.right = None\n",
+    "# class TreeNode:\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.left = None\n",
+    "#         self.right = None\n",
     "\n",
     "class Solution:\n",
-    "    def levelOrder(self, root):\n",
+    "    def zigzagLevelOrder(self, root):\n",
     "        \"\"\"\n",
     "        :type root: TreeNode\n",
     "        :rtype: List[List[int]]\n",
@@ -22,17 +22,21 @@
     "        res = []\n",
     "        if not root:\n",
     "            return res\n",
-    "        layer = [root]\n",
-    "        while layer:\n",
+    "        #递归遍历，翻转数组\n",
+    "        def recursive(nodes, step):\n",
+    "            if len(nodes) == 0:\n",
+    "                return\n",
     "            tmp = []\n",
-    "            res.append([])\n",
-    "            for node in layer:\n",
+    "            tmpn = []\n",
+    "            for node in nodes:\n",
     "                if node.left:\n",
     "                    tmp.append(node.left)\n",
     "                if node.right:\n",
     "                    tmp.append(node.right)\n",
-    "                res[-1].append(node.val)\n",
-    "            layer = tmp\n",
+    "                tmpn.append(node.val)\n",
+    "            res.append(tmpn[::step])\n",
+    "            recursive(tmp, 0 - step)\n",
+    "        recursive([root], 1)\n",
     "        return res"
    ]
   },
@@ -44,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "[[7]]"
+       "[1, 2, 3]"
       ]
      },
      "execution_count": 2,
@@ -53,16 +57,7 @@
     }
    ],
    "source": [
-    "t1 = TreeNode(3)\n",
-    "t2 = TreeNode(9)\n",
-    "t3 = TreeNode(20)\n",
-    "t1.left = t2\n",
-    "t1.right = t3\n",
-    "t4 = TreeNode(15)\n",
-    "t5 = TreeNode(7)\n",
-    "t3.left = t4\n",
-    "t3.right = t5\n",
-    "Solution().levelOrder(t5)"
+    "[1,2,3][::1]"
    ]
   },
   {
