--- a/python3/098_validate-binary-search-tree.ipynb
+++ b/python3/098_validate-binary-search-tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,56 +14,50 @@
     "        self.right = None\n",
     "\n",
     "class Solution:\n",
-    "    def levelOrder(self, root):\n",
+    "    #遍历节点，比较节点最大值最小值\n",
+    "    def isValidBST(self, root):\n",
     "        \"\"\"\n",
     "        :type root: TreeNode\n",
-    "        :rtype: List[List[int]]\n",
+    "        :rtype: bool\n",
     "        \"\"\"\n",
-    "        res = []\n",
-    "        if not root:\n",
-    "            return res\n",
-    "        layer = [root]\n",
-    "        while layer:\n",
-    "            tmp = []\n",
-    "            res.append([])\n",
-    "            for node in layer:\n",
-    "                if node.left:\n",
-    "                    tmp.append(node.left)\n",
-    "                if node.right:\n",
-    "                    tmp.append(node.right)\n",
-    "                res[-1].append(node.val)\n",
-    "            layer = tmp\n",
-    "        return res"
+    "        def valid(node, max_num, min_num):\n",
+    "            if not node:\n",
+    "                return True\n",
+    "            if (max_num is not None and node.val >= max_num) or (min_num is not None and node.val <= min_num):\n",
+    "                return False\n",
+    "            return valid(node.left, node.val, min_num) and valid(node.right, max_num, node.val)\n",
+    "        return valid(root, None, None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[7]]"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t1 = TreeNode(3)\n",
-    "t2 = TreeNode(9)\n",
-    "t3 = TreeNode(20)\n",
-    "t1.left = t2\n",
-    "t1.right = t3\n",
-    "t4 = TreeNode(15)\n",
-    "t5 = TreeNode(7)\n",
-    "t3.left = t4\n",
-    "t3.right = t5\n",
-    "Solution().levelOrder(t5)"
+    "t1 = TreeNode(0)\n",
+    "t2 = TreeNode(-1)\n",
+    "t1.right = t2\n",
+    "Solution().isValidBST(t1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
