--- a/python3/167_two-sum-ii-input-array-is-sorted.ipynb
+++ b/python3/167_two-sum-ii-input-array-is-sorted.ipynb
@@ -2,55 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def removeElement(self, nums, val):\n",
+    "    def twoSum(self, numbers, target):\n",
     "        \"\"\"\n",
-    "        :type nums: List[int]\n",
-    "        :type val: int\n",
-    "        :rtype: int\n",
+    "        :type numbers: List[int]\n",
+    "        :type target: int\n",
+    "        :rtype: List[int]\n",
     "        \"\"\"\n",
-    "        size = len(nums)\n",
-    "        i = 0\n",
-    "        j = -1\n",
-    "        while i < size:\n",
-    "            if nums[i] == val:\n",
-    "                nums[i],nums[j] = nums[j],nums[i]\n",
-    "                i += 1\n",
-    "                j -= 1\n",
-    "                size -= 1\n",
-    "            i += 1\n",
-    "        return size"
+    "        num_m = {}\n",
+    "        for i,num in enumerate(numbers):\n",
+    "            tmp = target - num\n",
+    "            if tmp in num_m:\n",
+    "                return [num_m[tmp] + 1, i + 1]\n",
+    "            else:\n",
+    "                num_m[num] = i\n",
+    "        return None\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 3, 0, 4]\n"
+      "{}\n",
+      "{2: 0}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5"
+       "[1, 2]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution().removeElement([0,1,2,2,3,0,4,2], 2)"
+    "Solution().twoSum([2,7,11,15],9)"
    ]
   },
   {
