--- a/python3/209_minimum-size-subarray-sum.ipynb
+++ b/python3/209_minimum-size-subarray-sum.ipynb
@@ -2,55 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def removeElement(self, nums, val):\n",
+    "    def minSubArrayLen(self, s, nums):\n",
     "        \"\"\"\n",
+    "        :type s: int\n",
     "        :type nums: List[int]\n",
-    "        :type val: int\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        size = len(nums)\n",
-    "        i = 0\n",
-    "        j = -1\n",
-    "        while i < size:\n",
-    "            if nums[i] == val:\n",
-    "                nums[i],nums[j] = nums[j],nums[i]\n",
-    "                i += 1\n",
-    "                j -= 1\n",
-    "                size -= 1\n",
-    "            i += 1\n",
-    "        return size"
+    "        left = 0\n",
+    "        total = 0\n",
+    "        res = 0\n",
+    "        for i,num in enumerate(nums):\n",
+    "            total += num\n",
+    "            if total >= s:\n",
+    "                res = i - left + 1 if res == 0 else min(i - left + 1, res)\n",
+    "                for j in range(left, i + 1):\n",
+    "                    total -= nums[j]\n",
+    "                    left = j + 1\n",
+    "                    if total < s:\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        res = min(i - left + 1, res)\n",
+    "                        \n",
+    "        return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 3, 0, 4]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution().removeElement([0,1,2,2,3,0,4,2], 2)"
+    "Solution().minSubArrayLen(7,[2,3,1,2,4,3])"
    ]
   },
   {
