--- a/python3/067_add-binary.ipynb
+++ b/python3/067_add-binary.ipynb
@@ -2,55 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def removeElement(self, nums, val):\n",
+    "class Solution(object):\n",
+    "    def addBinary(self, a, b):\n",
     "        \"\"\"\n",
-    "        :type nums: List[int]\n",
-    "        :type val: int\n",
-    "        :rtype: int\n",
+    "        :type a: str\n",
+    "        :type b: str\n",
+    "        :rtype: str\n",
     "        \"\"\"\n",
-    "        size = len(nums)\n",
-    "        i = 0\n",
-    "        j = -1\n",
-    "        while i < size:\n",
-    "            if nums[i] == val:\n",
-    "                nums[i],nums[j] = nums[j],nums[i]\n",
-    "                i += 1\n",
-    "                j -= 1\n",
-    "                size -= 1\n",
-    "            i += 1\n",
-    "        return size"
+    "        res = int(a,2) + int(b,2)\n",
+    "        return format(int(a, 2) + int(b,2), 'b')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 3, 0, 4]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "'-10'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution().removeElement([0,1,2,2,3,0,4,2], 2)"
+    "Solution().addBinary(\"-11\", \"1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11101010'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "format(234,'b')"
    ]
   },
   {
