--- a/python3/561_array-partition-i.ipynb
+++ b/python3/561_array-partition-i.ipynb
@@ -2,55 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def removeElement(self, nums, val):\n",
+    "    def arrayPairSum(self, nums):\n",
     "        \"\"\"\n",
     "        :type nums: List[int]\n",
-    "        :type val: int\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        size = len(nums)\n",
-    "        i = 0\n",
-    "        j = -1\n",
-    "        while i < size:\n",
-    "            if nums[i] == val:\n",
-    "                nums[i],nums[j] = nums[j],nums[i]\n",
-    "                i += 1\n",
-    "                j -= 1\n",
-    "                size -= 1\n",
-    "            i += 1\n",
-    "        return size"
+    "        return sum(sorted(nums)[::2])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 3, 0, 4]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution().removeElement([0,1,2,2,3,0,4,2], 2)"
+    "sum([1,2,3,4][::2])"
    ]
   },
   {
