--- a/python3/724_find-pivot-index.ipynb
+++ b/python3/724_find-pivot-index.ipynb
@@ -2,55 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def removeElement(self, nums, val):\n",
+    "class Solution(object):\n",
+    "    def pivotIndex(self, nums):\n",
     "        \"\"\"\n",
     "        :type nums: List[int]\n",
-    "        :type val: int\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        size = len(nums)\n",
-    "        i = 0\n",
-    "        j = -1\n",
-    "        while i < size:\n",
-    "            if nums[i] == val:\n",
-    "                nums[i],nums[j] = nums[j],nums[i]\n",
-    "                i += 1\n",
-    "                j -= 1\n",
-    "                size -= 1\n",
-    "            i += 1\n",
-    "        return size"
+    "        total = sum(nums)\n",
+    "        left = 0\n",
+    "        for i, num in enumerate(nums):\n",
+    "            if left * 2 + num == total:\n",
+    "                return i\n",
+    "            left += num\n",
+    "        return -1\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 3, 0, 4]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution().removeElement([0,1,2,2,3,0,4,2], 2)"
+    "nums = [-1,-1,-1,0,1,1]\n",
+    "Solution().pivotIndex(nums)"
    ]
   },
   {
