--- a/python3/747_largest-number-at-least-twice-of-others.ipynb
+++ b/python3/747_largest-number-at-least-twice-of-others.ipynb
@@ -2,55 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def removeElement(self, nums, val):\n",
+    "class Solution(object):\n",
+    "    def dominantIndex(self, nums):\n",
     "        \"\"\"\n",
     "        :type nums: List[int]\n",
-    "        :type val: int\n",
     "        :rtype: int\n",
     "        \"\"\"\n",
-    "        size = len(nums)\n",
-    "        i = 0\n",
-    "        j = -1\n",
-    "        while i < size:\n",
-    "            if nums[i] == val:\n",
-    "                nums[i],nums[j] = nums[j],nums[i]\n",
-    "                i += 1\n",
-    "                j -= 1\n",
-    "                size -= 1\n",
-    "            i += 1\n",
-    "        return size"
+    "        m_n = max(nums)\n",
+    "        res = -1\n",
+    "        for i, num in enumerate(nums):\n",
+    "            if num == m_n:\n",
+    "                res = i\n",
+    "                continue\n",
+    "            if num * 2 > m_n:\n",
+    "                return -1\n",
+    "        return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 3, 0, 4]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution().removeElement([0,1,2,2,3,0,4,2], 2)"
+    "nums = [0,0,0,0,1]\n",
+    "Solution().dominantIndex(nums)"
    ]
   },
   {
